Further work on introducing immutable types